# audio-reactive-led-strip

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  environment.yml  requirements.txt  run  setup.py
.github/workflows/: python-builds.yml
arduino/wired_controller/: wired_controller.ino
arduino/ws2812_controller/: network_conf.h  ws2812_controller.ino
python/: audio_reactive_desktop.spec  config.py  debug.py  gui.py  led.py  visualization.py
shaders/: line.wgsl
src/: CMakeLists.txt  args.rs  audio.c  audio.h  audio.rs  config.h  config.rs  dsp.c  dsp.h  dsp.rs  gamma_table.c  gamma_table.h  gamma_table.rs  gui.c  gui.h  gui.rs  led.c  led.h  led.rs  main.c  main.cpp  main.rs  reactive_app.c  reactive_app.h  reactive_app_window.c  reactive_app_window.h  renderer.rs  run.rs  test_audio.c  test_mel_bank.c
src/gui/: double_slider.rs  waveform.rs
src/gui/waveform/: pipeline.rs
src/gui/waveform/pipeline/: buffer.rs
test/: CMakeLists.txt  config.toml  config_error.toml  exp_filter_test.npz  mel_test.npz  rfft_test.npz  test_audio.c  test_exp_filter.c  test_fft.c  test_led.c  test_mel_bank.c
