[package]
name = "audio-reactive-led-strip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
bytemuck = "1.16.1"
clap = { version = "4.5.13", features = ["derive"] }
cpal = "0.15.2"
dirs = "5.0.1"
iced = { version = "0.12.1", features = ["debug", "wgpu"] }
iced_core = "0.12.3"
iced_style = "0.12.1"
ndarray = { version = "0.15.6", features = ["approx"] }
num-traits = "0.2.19"
rustfft = "6.1.0"
serde = { version = "1.0.194", features = ["derive"] }
toml = { version = "0.8.8", features = ["parse"] }

[dev-dependencies]
ndarray-npy = "0.8.1"
ndarray-rand = "0.14.0"
